--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,24 +1,32 @@
 /* navigation */
-@media (max-width: 1200px) { 
-    .nav-list {
-       margin-left: 50px;
+@media (max-width: 600px) { 
+    .title1 {
+        padding-left: 15px;
     }
-    .number {
-        margin-left: 10px;
+    .title2 {
+        padding-left: 15px;
+        font-size: 60px;
     }
+    .bottom-div {
+        margin-left: 15px;
+    }
+       
+        
 }
 
-@media (max-width: 880px) {
+@media (max-width: 800px) {
     .nav-list {
         display: none;
     }
-    .number {
-        display: none;
+    .burger-bar {
+        display: block;
+        padding-right: 20px;
+     
     }
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 1120px) {
     .section2 {
         flex-direction: column;
         justify-content: space-between;
@@ -29,6 +37,7 @@
         padding-bottom: 20px;
        
     }
+    
     .form-div {
         flex-direction: column;
         align-items: center;
@@ -40,4 +49,14 @@
     
 }
 
-@media (max-width: 262px)
+@media (max-width: 420px) {
+    .form-email {
+        width: 310px;
+    }
+    .textarea {
+        width: 310px;
+    }
+    .sumbit {
+        width: 310px;
+    }
+}
