--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,43 @@
 /* navigation */
 .nav-div {
     display: flex;
-    max-width: 1200px;
+    max-width: 1300px;
     width: 100%;
     margin-top: 20px;
-    margin-left: 100px;
     align-items: center;
     justify-content: space-between;
 }
-.nav-list {
-    display: flex;
-    max-width: 500px;
-    width: 100%;
-    margin-left: 300px;
-    color: black;
-    flex-wrap: wrap;
+.nav-image {
+    width: 50px;
+    align-items: center;
+    padding-left: 50px;
+  
 }
-
+.nav-list {
+    display: flex;  
+    color: black;
+ 
+}
 
 
 .list {
     color: black;
-    margin-right: 30px;
+    margin-right: 40px;
 }
 .list:hover {
     color: #5EB6E1;
 }
 
+.burger-bar {
+    display: none;
+    font-size: 40px;
+    color: black;
+    
+}
 
 .header-image {
     background-image: url(../images/girl-resting-after-exercises-gym_152625-820_auto_x2_auto_x2.jpg);
-    max-width: auto;
+    max-width: 1400px;
     width: 100%;
     height: 600px;
     background-size: cover;
@@ -42,10 +49,12 @@
 
 .background-text {
     position: relative;
-    left: 100px;
+    left: 80px;
     top: 20px;
-    max-width: 800px;
+    max-width: 610px;
     width: 100%;
+    margin: o auto;
+ 
     
 }
 
@@ -53,12 +62,24 @@
     color: white;
     font-size: 30px;
     opacity: 75%;
-    margin-top: 150px;
+    margin-top: 100px;
+    max-width: 610px;
+    width: 100%;
+    padding-left: 100px;
+  
 }
 
 .title2 {
     color: white;
-    font-size: 75px;
+    font-size: 70px;
+    max-width: 610px;
+    width: 100%;
+    margin-top: 10px;
+    position: relative;
+    padding-left: 100px;
+    
+   
+    
 }
 
 .bottom-div {
@@ -69,11 +90,13 @@
     align-items: center;
     justify-content: center;
     margin-top: 20px;
+    position: relative;
+    margin-left: 100px;
 }
 
 .bottom-text {
     color: black;
-    ;
+   
 }
 
 /* section2 */
@@ -85,7 +108,8 @@
 
 .first-div {
     position: relative;
-    width: 476px;
+    max-width: 476px;
+    width: 100%;
     height: 283px;
     display: flex;
     justify-content: center;
@@ -98,6 +122,8 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    
+    
 }
 
 .text-div :nth-child(1) {
@@ -163,7 +189,8 @@
 }
 .second-div {
     position: relative;
-    width: 476px;
+    max-width: 476px;
+    width: 100%;
     height: 283px;
     display: flex;
     justify-content: center;
@@ -172,7 +199,8 @@
 
 .third-div {
     position: relative;
-    width: 476px;
+    max-width: 476px;
+    width: 100%;
     height: 283px;
     display: flex;
     justify-content: center;
@@ -180,7 +208,8 @@
 }
 
 .image-div {
-    width: 420px;
+    max-width: 420px;
+    width: 100%;
 }
 
 
@@ -189,12 +218,14 @@
     display: flex;
     justify-content: space-between;
     background-color: #181A1F;
-    width: auto;
+    max-width: 1400px;
+    width: 100%;
     height: 687px;
     margin-top: 50px;
 }
 .image-bodybuilder {
-    width: 600px;
+    max-width: 600px;
+    width: 100%;
     
     
 }
