--- a/css/responsive.css
+++ b/css/responsive.css
@@ -25,18 +25,23 @@
     }
 }
 
+@media (max-width: 980px) {
+        .section2 {
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .second-div {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            }
+
+}
 
 @media (max-width: 1120px) {
-    .section2 {
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .second-div {
-        padding-top: 20px;
-        padding-bottom: 20px;
-       
-    }
+        .third-div {
+            padding-top: 20px;
+        }
     
     .form-div {
         flex-direction: column;
