--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.body {
+    background-color: #cbe8f7;
+   
+  
+}
 /* navigation */
 .nav-div {
     display: flex;
@@ -7,6 +12,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
 .nav-image {
     width: 50px;
     align-items: center;
@@ -101,14 +107,16 @@
 
 /* section2 */
 .section2 {
-    margin-top: 250px;
+    margin-top: 150px;
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 
 }
 
 .first-div {
     position: relative;
-    max-width: 476px;
+    max-width: 420px;
     width: 100%;
     height: 283px;
     display: flex;
@@ -172,8 +180,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 25px;
-    
+    margin-top: 25px; 
     color: white;
 }
 
@@ -189,7 +196,7 @@
 }
 .second-div {
     position: relative;
-    max-width: 476px;
+    max-width: 420px;
     width: 100%;
     height: 283px;
     display: flex;
@@ -199,7 +206,7 @@
 
 .third-div {
     position: relative;
-    max-width: 476px;
+    max-width: 420px;
     width: 100%;
     height: 283px;
     display: flex;
