--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,7 +33,6 @@
         }
         .second-div {
             padding-top: 20px;
-            padding-bottom: 20px;
             }
 
 }
@@ -64,4 +63,10 @@
     .sumbit {
         width: 310px;
     }
+    .paragraph {
+        font-size: 18px;
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
 }
