--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .body {
-    background-color: #cbe8f7;
+    background-color: #d8effa;
    
   
 }
@@ -121,7 +121,6 @@
     height: 283px;
     display: flex;
     justify-content: center;
-
 }
 
 .text-div {
@@ -130,8 +129,6 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    
-    
 }
 
 .text-div :nth-child(1) {
@@ -157,7 +154,6 @@
     justify-content: center;
     align-items: center;
     margin-top: 25px;
-    
     color: white;
 }
 .price-box2 {
@@ -169,7 +165,6 @@
     justify-content: center;
     align-items: center;
     margin-top: 25px;
-    
     color: white;
 }
 .price-box3 {
@@ -201,7 +196,6 @@
     height: 283px;
     display: flex;
     justify-content: center;
-
 }
 
 .third-div {
@@ -211,16 +205,92 @@
     height: 283px;
     display: flex;
     justify-content: center;
-
 }
 
 .image-div {
-    max-width: 420px;
     width: 100%;
+   
+}
+
+/*  section 3 */
+.section3 {
+    background-color: #181A1F;  
+    margin-top: 80px;
+}
+.trainer-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.blue-circle {
+    background-color: #5EB6E1;
+    max-width: 40px;
+    width: 100%;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon {
+    color: white;
+    width: 15px;
+}
+
+
+.icon:hover {
+    transform: scale(1.2);  
+}
+.small-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-exercing {
+    width: 100px;
+    margin-top: 40px;
+}
+.image-exercing:hover {
+    border-color: #5EB6E1;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 50%;    
+    transform: scale(1.3);  
+}
+
+.paragraph {
+    max-width: 550px;
+    width: 100%;
+    font-size: 25px;
+    color: #C5C5C5;
+    margin-right: 70px;
+    margin-left: 70px;  
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.trainer {
+    font-size: 30px;
+    color: white;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.name {
+    margin-top: 20px;
+    font-size: 20px;
+    color: white;
+    height: 100px;
 }
 
 
 
+
+
+
+
+/* form-div */
 .form-div {
     display: flex;
     justify-content: space-between;
@@ -228,7 +298,6 @@
     max-width: 1400px;
     width: 100%;
     height: 687px;
-    margin-top: 50px;
 }
 .image-bodybuilder {
     max-width: 600px;
