--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,14 +15,28 @@
 }
 
 @media (max-width: 800px) {
-    .nav-list {
-        display: none;
+    .navigation {
+        display: none;  
     }
+    
     .burger-bar {
         display: block;
         padding-right: 20px;
-     
+        padding-top: ;
+        
     }
+    .nav-list {
+        flex-direction: column;
+        align-items: center;
+    }
+    .navigation.active {
+        display: block;
+    }
+    .list {
+        padding-right: 30px;
+        margin-top: 100px;
+    }
+   
 }
 
 @media (max-width: 980px) {
@@ -60,7 +74,7 @@
     .textarea {
         width: 280px;
     }
-    .sumbit {
+    .submit {
         width: 280px;
     }
     .paragraph {
@@ -68,9 +82,7 @@
         margin-right: 30px;
         margin-left: 30px;
     }
-    .left-div {
-
-    }
+   
 
 }
 
