--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@
     align-items: center;
     justify-content: space-between;
 }
-
 .nav-image {
     width: 50px;
     align-items: center;
@@ -32,6 +31,7 @@
     color: black;
     margin-right: 40px;
     font-family: 'Roboto';
+    
 }
 .list:hover {
     color: #5EB6E1;
@@ -41,7 +41,8 @@
     display: none;
     font-size: 40px;
     color: black;
-    
+    position: absolute;
+    right: 10px;
 }
 
 .header-image {
@@ -380,7 +381,7 @@
     outline: none;
 }
 
-.sumbit {
+.submit {
     max-width: 500px;
     width: 100%;
     height: 50px;
