--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@
 /* form-div */
 .form-div {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: var(--maincolor);
     width: 100%;
     height: 687px;
@@ -473,7 +473,12 @@
     margin-top: 10px;
     font-family: 'Lora';
 }
-
+.fa-phone-volume {
+    color: #5EB6E1;
+}
+.fa-envelope {
+    color: #5EB6E1;
+}
 .map {
     margin-top: 50px;
     margin-bottom: var(--marginmain);
